Bug 596808 - nsDiskCacheDevice::Init() called twice resulting in no disk cache available  r=jduell, a=betaN